--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -10,6 +10,9 @@ ion-avatar{
 ion-card-title{
     color: white;
 }
+ion-card-subtitle{
+    color: white;
+}
 ion-avatar{
     display: flex;
     margin:0 auto; 
