--- a/src/app/pages/register/register.page.scss
+++ b/src/app/pages/register/register.page.scss
@@ -25,7 +25,8 @@ ion-input, select, textarea{
   -webkit-border-radius: 50px;
   border-radius: 10px;
   //margin-bottom: 10px;  
-  background-color: rgb(243, 238, 192);
+  //background-color: rgb(243, 238, 192);
+  background-color: rgb(230, 230, 230);
   //margin-top: 17px;
   text-align: center;
 }
