--- a/src/app/pages/perfil/perfil.page.html
+++ b/src/app/pages/perfil/perfil.page.html
@@ -6,8 +6,8 @@
     </ion-buttons>
 
     <ion-buttons slot="end">
-      <ion-button (click)="goEditFacebook()" id="fbLogo" size="large">
-        <ion-icon slot="icon-only" name="logo-facebook"></ion-icon>
+      <ion-button (click)="goEditFacebook()" id="fbButton">
+        <ion-icon id="fbLogo" name="logo-facebook"></ion-icon>
       </ion-button>
     </ion-buttons>
 
@@ -28,147 +28,178 @@
     <ion-col size="12">
       <ion-card id="card">
         <ion-card-content>
-          <ion-row>
-            <ion-col size="4" size-xs="12" size-sm="6" size-md="4" size-sm="2">
-              <input type = "file" class=d-none (change)="onPhotoSelected($event)" required #photoInput>
-              <img [src] ="photoSelected || 'assets/default.png'" width="400px" class="img-fluid" (click)="photoInput.click()">
-            </ion-col>
+          <form [formGroup]="editperfilForm" (ngSubmit)="updatePerfil($event2)">
+            <ion-row>
+              <ion-col size="4" size-xs="12" size-sm="6" size-md="4" size-sm="2">
+                <input type = "file" class=d-none (change)="onPhotoSelected($event)" required #photoInput>
+                <img [src] ="photoSelected || 'assets/default.png'" width="400px" class="img-fluid" (click)="photoInput.click()">
+              </ion-col>
 
-            <ion-col size="8" size-xs="12" size-sm="4" size-md="8">
-              <form [formGroup]="editperfilForm" (ngSubmit)="updatePerfil($event2)">
-              <ion-grid>
-
-                <!--ion-row class="ion-justify-content-center">
-                  <ion-col class="ion-align-self-center" size-lg="11" size-xs="12"-->
-
-                <ion-list>
-                  <div class="formGroup">
-
-                    <ion-item lines="none">
-                      <ion-input  formControlName="pass1" type="password" name="pass1" placeholder="Your active password" [(ngModel)]="pass1"></ion-input>
-                      <div *ngIf="editperfilForm.controls['pass1'].valid">
-                        <a class="success">&#9989;</a>
-                      </div>
-                    </ion-item>
-                    <div class="validation-errors">
-                      <ng-container *ngFor="let validation of validation_messages.pass1" >
-                        <div *ngIf="editperfilForm.get('pass1').hasError(validation.type) && (editperfilForm.get('pass1').dirty || editperfilForm.get('pass1').touched)">
-                          <div class="danger">
-                            {{ validation.message }}
-                          </div>
-                        </div>
-                      </ng-container>
-                    </div>
-                  </div>
-
-                  <div class="formGroup">
-                    <ion-item lines="none">
-                      <ion-input  formControlName="difpass" type="password" name="difpass" placeholder="Your NEW password or if you dont want to change put the old password" [(ngModel)]="difpass"></ion-input>
-                      <div *ngIf="editperfilForm.controls['difpass'].valid">
-                        <a class="success">&#9989;</a>
-                      </div>
-                    </ion-item>
-                    <div class="validation-errors">
-                      <ng-container *ngFor="let validation of validation_messages.difpass" >
-                        <div *ngIf="editperfilForm.get('difpass').hasError(validation.type) && (editperfilForm.get('difpass').dirty || editperfilForm.get('difpass').touched)">
-                          <div class="danger">
-                            {{ validation.message }}
-                          </div>
-                        </div>
-                      </ng-container>
-                    </div>
-                  </div>
-      
-                  <!-- <div class="formGroup">  // si queremos obligar a que las contraseñas sean iguales
-                    <ion-item>
-                      <ion-input formControlName="difpass" type="password" name="difpass" placeholder="Your NEW password" [(ngModel)]="difpass"></ion-input>
-                      <div *ngIf="editperfilForm.controls['difpass'].valid && !editperfilForm.hasError('passwordNotMatch')">
-                        <a color="success">&#9989;</a>
-                      </div>
-                    </ion-item>
-                    <div class="validation-errors">
-                      <ng-container *ngFor="let validation of validation_messages.difpass" >
-                        <div *ngIf="editperfilForm.get('difpass').hasError(validation.type) && (editperfilForm.get('difpass').dirty || editperfilForm.get('difpass').touched)">
-                          <div class="danger">
-                            {{ validation.message }}
-                          </div>
-                        </div>
-                      </ng-container>
-                      <div class="error-message" *ngIf="!editperfilForm.get('difpass').errors && editperfilForm.hasError('passwordNotMatch') && (editperfilForm.get('difpass').dirty || editperfilForm.get('difpass').touched)">
-                        <div class="danger">Las contraseñas coinciden, cambialas</div>
-                      </div>
-                    </div>
-                  </div> -->
-
-                  <div class="formGroup">
-                    <ion-item lines="none">
-                      <ion-input  formControlName="mail" type="text" name="mail" placeholder="Mail" value={{mail}} [(ngModel)]="mail"></ion-input>
-                      <div *ngIf="editperfilForm.controls['mail'].valid">
-                        <a class="success">&#9989;</a>
-                      </div>
-                    </ion-item>
-                    <div class="validation-errors">
-                      <ng-container *ngFor="let validation of validation_messages.mail" >
-                        <div *ngIf="editperfilForm.get('mail').hasError(validation.type) && (editperfilForm.get('mail').dirty || editperfilForm.get('mail').touched)">
-                          <div class="danger">
-                            {{ validation.message }}
-                          </div>
-                        </div>
-                      </ng-container>
-                    </div>
-                  </div>
-      
-                  <div class="formGroup">
-                    <ion-item lines="none">
-                      <ion-input  formControlName="sexo" type="text" name="sexo" placeholder="Sexo" value={{user.sexo}} [(ngModel)]="sexo" ></ion-input>
-                      <div *ngIf="editperfilForm.controls['sexo'].valid">
-                        <a class="success">&#9989;</a>
-                      </div>
-                    </ion-item>
-                    <div class="validation-errors">
-                      <ng-container *ngFor="let validation of validation_messages.sexo" >
-                        <div *ngIf="editperfilForm.get('sexo').hasError(validation.type) && (editperfilForm.get('sexo').dirty || editperfilForm.get('sexo').touched)">
-                          <div class="danger">
-                            {{ validation.message }}
-                          </div>
-                        </div>
-                      </ng-container>
-                    </div>
-                  </div>
-      
-                  <div class="formGroup">
-                    <ion-item lines="none">
-                      <ion-input  formControlName="edad" type="text" name="edad" placeholder="Edad" value={{user.edad}} [(ngModel)]="edad"></ion-input>
-                      <div *ngIf="editperfilForm.controls['edad'].valid">
-                        <a class="success">&#9989;</a>
-                      </div>
-                    </ion-item>
-                    <div class="validation-errors">
-                      <ng-container *ngFor="let validation of validation_messages.edad" >
-                        <div *ngIf="editperfilForm.get('edad').hasError(validation.type) && (editperfilForm.get('edad').dirty || editperfilForm.get('edad').touched)">
-                          <div class="danger">
-                            {{ validation.message }}
-                          </div>
-                        </div>
-                      </ng-container>
-                    </div>
-                  </div>
-
-                  <ion-item lines="none">
-                    Guardar ubicación actual
-                    <ion-button slot="end" *ngIf="locationSelected" color="success" fill="solid" size="default" (click)="toggleLocationSelected()"><ion-icon name="location-outline" slot="icon-only"></ion-icon></ion-button>
-                    <ion-button slot="end" *ngIf="!locationSelected" color="success" fill="outline" size="default" (click)="toggleLocationSelected()"><ion-icon name="location-outline" slot="icon-only"></ion-icon></ion-button> 
-                  </ion-item> 
-              
-                <br>   
-                </ion-list>
+              <ion-col size="8" size-xs="12" size-sm="4" size-md="8">
                 
-                <ion-button expand="block" type="submit" [disabled]="editperfilForm.invalid">Guardar Cambios</ion-button>
+                <ion-grid>
 
-              </ion-grid>
-              </form>
-            </ion-col>
-          </ion-row>
+                  <!--ion-row class="ion-justify-content-center">
+                    <ion-col class="ion-align-self-center" size-lg="11" size-xs="12"-->
+
+                  <ion-list>
+                    <div class="formGroup">
+                      <ion-item lines="none">
+                        <ion-label><b>Contraseña actual:</b></ion-label>
+                        <ion-input  formControlName="pass1" type="password" name="pass1" placeholder="Your active password" [(ngModel)]="pass1"></ion-input>
+                        <div *ngIf="editperfilForm.controls['pass1'].valid">
+                          <a class="success">&#9989;</a>
+                        </div>
+                      </ion-item>
+                      <div class="validation-errors">
+                        <ng-container *ngFor="let validation of validation_messages.pass1" >
+                          <div *ngIf="editperfilForm.get('pass1').hasError(validation.type) && (editperfilForm.get('pass1').dirty || editperfilForm.get('pass1').touched)">
+                            <div class="danger">
+                              {{ validation.message }}
+                            </div>
+                          </div>
+                        </ng-container>
+                      </div>
+                    </div>
+
+                    <div class="formGroup">
+                      <ion-item lines="none">
+                        <ion-label><b>Repetir Contraseña/Nueva:</b></ion-label>
+                        <ion-input  formControlName="difpass" type="password" name="difpass" placeholder="Your NEW password or if you dont want to change put the old password" [(ngModel)]="difpass"></ion-input>
+                        <div *ngIf="editperfilForm.controls['difpass'].valid">
+                          <a class="success">&#9989;</a>
+                        </div>
+                      </ion-item>
+                      <div class="validation-errors">
+                        <ng-container *ngFor="let validation of validation_messages.difpass" >
+                          <div *ngIf="editperfilForm.get('difpass').hasError(validation.type) && (editperfilForm.get('difpass').dirty || editperfilForm.get('difpass').touched)">
+                            <div class="danger">
+                              {{ validation.message }}
+                            </div>
+                          </div>
+                        </ng-container>
+                      </div>
+                    </div>
+        
+                    <!-- <div class="formGroup">  // si queremos obligar a que las contraseñas sean iguales
+                      <ion-item>
+                        <ion-input formControlName="difpass" type="password" name="difpass" placeholder="Your NEW password" [(ngModel)]="difpass"></ion-input>
+                        <div *ngIf="editperfilForm.controls['difpass'].valid && !editperfilForm.hasError('passwordNotMatch')">
+                          <a color="success">&#9989;</a>
+                        </div>
+                      </ion-item>
+                      <div class="validation-errors">
+                        <ng-container *ngFor="let validation of validation_messages.difpass" >
+                          <div *ngIf="editperfilForm.get('difpass').hasError(validation.type) && (editperfilForm.get('difpass').dirty || editperfilForm.get('difpass').touched)">
+                            <div class="danger">
+                              {{ validation.message }}
+                            </div>
+                          </div>
+                        </ng-container>
+                        <div class="error-message" *ngIf="!editperfilForm.get('difpass').errors && editperfilForm.hasError('passwordNotMatch') && (editperfilForm.get('difpass').dirty || editperfilForm.get('difpass').touched)">
+                          <div class="danger">Las contraseñas coinciden, cambialas</div>
+                        </div>
+                      </div>
+                    </div> -->
+
+                    <div class="formGroup">
+                      <ion-item lines="none">
+                        <ion-label><b>Correo:</b></ion-label>
+                        <ion-input  formControlName="mail" type="text" name="mail" placeholder="Mail" value={{mail}} [(ngModel)]="mail"></ion-input>
+                        <div *ngIf="editperfilForm.controls['mail'].valid">
+                          <a class="success">&#9989;</a>
+                        </div>
+                      </ion-item>
+                      <div class="validation-errors">
+                        <ng-container *ngFor="let validation of validation_messages.mail" >
+                          <div *ngIf="editperfilForm.get('mail').hasError(validation.type) && (editperfilForm.get('mail').dirty || editperfilForm.get('mail').touched)">
+                            <div class="danger">
+                              {{ validation.message }}
+                            </div>
+                          </div>
+                        </ng-container>
+                      </div>
+                    </div>
+
+                    <div>
+                      <ion-segment value="m" (ionChange)="generoSegmentChanged($event)">
+                        <ion-segment-button value="m">
+                          <ion-label>Hombre</ion-label>
+                        </ion-segment-button>
+                        <ion-segment-button value="f">
+                          <ion-label>Mujer</ion-label>
+                        </ion-segment-button>
+                      </ion-segment>
+                    </div>
+        
+                    <!--div class="formGroup">
+                      <ion-item lines="none">
+                        <ion-input  formControlName="sexo" type="text" name="sexo" placeholder="Sexo" value={{user.sexo}} [(ngModel)]="sexo" ></ion-input>
+                        <div *ngIf="editperfilForm.controls['sexo'].valid">
+                          <a class="success">&#9989;</a>
+                        </div>
+                      </ion-item>
+                      <div class="validation-errors">
+                        <ng-container *ngFor="let validation of validation_messages.sexo" >
+                          <div *ngIf="editperfilForm.get('sexo').hasError(validation.type) && (editperfilForm.get('sexo').dirty || editperfilForm.get('sexo').touched)">
+                            <div class="danger">
+                              {{ validation.message }}
+                            </div>
+                          </div>
+                        </ng-container>
+                      </div>
+                    </div-->
+        
+                    <div class="formGroup">
+                      <ion-item lines="none">
+                        <ion-label><b>Edad:</b></ion-label>
+                        <ion-input  formControlName="edad" type="number" min="0" name="edad" placeholder="Edad" value={{user.edad}} [(ngModel)]="edad"></ion-input>
+                        <div *ngIf="editperfilForm.controls['edad'].valid">
+                          <a class="success">&#9989;</a>
+                        </div>
+                      </ion-item>
+                      <div class="validation-errors">
+                        <ng-container *ngFor="let validation of validation_messages.edad" >
+                          <div *ngIf="editperfilForm.get('edad').hasError(validation.type) && (editperfilForm.get('edad').dirty || editperfilForm.get('edad').touched)">
+                            <div class="danger">
+                              {{ validation.message }}
+                            </div>
+                          </div>
+                        </ng-container>
+                      </div>
+                    </div>
+
+                    <ion-item lines="none">
+                      <b>Guardar ubicación actual</b>
+                      <ion-button slot="end" *ngIf="locationSelected" color="success" fill="solid" size="default" (click)="toggleLocationSelected()"><ion-icon name="location-outline" slot="icon-only"></ion-icon></ion-button>
+                      <ion-button slot="end" *ngIf="!locationSelected" color="success" fill="outline" size="default" (click)="toggleLocationSelected()"><ion-icon name="location-outline" slot="icon-only"></ion-icon></ion-button> 
+                    </ion-item> 
+                
+                  <br>   
+                  </ion-list>
+
+                </ion-grid>
+                
+              </ion-col>
+            </ion-row>
+
+            <ion-row>
+              <ion-col>
+                <ion-button expand="block" type="submit" [disabled]="editperfilForm.invalid">
+                  <ion-icon name="save" slot="start"></ion-icon>
+                  Guardar Cambios
+                </ion-button>
+              </ion-col>
+              <ion-col>
+                <ion-button expand="block" color="danger" (click)="deleteUsuario()">
+                  <ion-icon name="trash" slot="start"></ion-icon>
+                  Eliminar Cuenta
+                </ion-button>
+              </ion-col>
+            </ion-row>
+
+          </form>
+
         </ion-card-content>
       </ion-card>
     </ion-col>
