--- a/src/app/pages/perfil/perfil.page.scss
+++ b/src/app/pages/perfil/perfil.page.scss
@@ -1,28 +1,28 @@
 #fbLogo{
-    color: #3b5998;
-    background-color: white;
-    border-color: #3b5998;
-    font-size: 20px;
-    size: 40px;
-    border-left: none;
-    border-style: 0;
+  color: #3b5998;
+  background-color: white;
+  border-color: #3b5998;
+  //font-size: 20px;
+  //size: 40px;
+  //border-left: none;
+  //border-style: 0;
+}
+#fbButton{
+  font-size: 20px;
 }
 ion-card-title{
-    display: center;
-    align-self: center;
-    align-content: center;
-    text-align: center;
-    font-size: 20px;
-    margin-top: 0px;  
-  }
-
-  #card{
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-  }
-
-
+  display: center;
+  align-self: center;
+  align-content: center;
+  text-align: center;
+  font-size: 20px;
+  margin-top: 0px;  
+}
+#card{
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
 ion-card-header{
     text-align: center;
     background-color:#1E8FD5;
