authguard+mensajes con fecha arreglada

--- a/src/app/pages/chatroom/chatroom.page.html
+++ b/src/app/pages/chatroom/chatroom.page.html
@@ -20,7 +20,7 @@
         <ion-card>
         <ion-card-header>
           <ion-card-subtitle> 
-          {{ message.author}}  -  {{message.date | date:'dd/MM/yy hh:MM:yy'}}
+          {{ message.author}}  -  {{message.date}}
           </ion-card-subtitle>
           <!--ion-card-title>
           {{ message.author}}
@@ -42,7 +42,7 @@
         <ion-card id="u">
           <ion-card-header class="text-white">
             <ion-card-subtitle class="text-white"> 
-            {{ username }}  -  {{message.date | date:'dd/MM/yy hh:MM:yy'}}
+            {{ username }}  -  {{message.date}}
             </ion-card-subtitle>
             <!--ion-card-title class="text-white">
             {{ username }}
